# DobotLink

./: DobotLinkPro.pro  README.md  README_CN.md  uac.rc  version.h
DobotLink/: DobotLink.pro  DobotLinkMain.cpp  DobotLinkMain.h  DobotLinkMain.ui  Info.plist  MacosApi.h  MacosApi.mm  dobotlink.icns  main.cpp  stable.h
DobotLink/DError/: DError.cpp  DError.h
DobotLink/DelayToQuit/: DelayToQuit.cpp  DelayToQuit.h
DobotLink/MessageCenter/: DMessageCenter.cpp  DMessageCenter.h  DPacket.cpp  DPacket.h
DobotLink/Module/: DLogger.cpp  DLogger.h  DNetworkManager.cpp  DNetworkManager.h  DOpenFile.cpp  DOpenFile.h  DSerialPort.cpp  DSerialPort.h  DSettings.cpp  DSettings.h  DTcpSocketServer.cpp  DTcpSocketServer.h  DWebSocketServer.cpp  DWebSocketServer.h
DobotLink/PluginManager/: DPluginManager.cpp  DPluginManager.h
DobotLink/Upgrade/: DUpgrade.cpp  DUpgrade.h
DobotLink/Views/: DAboutUsDialog.cpp  DAboutUsDialog.h  DAboutUsDialog.ui  DArduinoTestForm.cpp  DArduinoTestForm.h  DArduinoTestForm.ui  DDownloadDialog.cpp  DDownloadDialog.h  DDownloadDialog.ui  DDownloadTestForm.cpp  DDownloadTestForm.h  DDownloadTestForm.ui  DLocalMonitorForm.cpp  DLocalMonitorForm.h  DLocalMonitorForm.ui  DMagicianTestForm.cpp  (+20 more)
Plugins/MagicDevicePlugin/magicianlite_virtual/: .clang-format  CMakeLists.txt  VirtualSerialPort.pri
Plugins/MagicDevicePlugin/magicianlite_virtual/src/: main.cpp
Plugins/MagicDevicePlugin/magicianlite_virtual/src/algorithm/: BitMacro.h  alarms.cpp  alarms.h  lookAhead.cpp  lookAhead.h  moveCircle.cpp  moveCircle.h  playBack.cpp  playBack.h  rtKinematicCalc.cpp  rtKinematicCalc.h  symbol.h  teach.cpp  teach.h  type.h  variable.cpp  variable.h
Plugins/MagicDevicePlugin/magicianlite_virtual/src/function_ctrl/collision_check/: CollisionCheckFunc.cpp  CollisionCheckFunc.h
Plugins/MagicDevicePlugin/magicianlite_virtual/src/mm/: ParaComm.h  RobotInfo.h  profile.cpp  profile.h
Plugins/MagicDevicePlugin/magicianlite_virtual/src/runtime/dcps/: cmd.cpp  cmd_id.h  dcps.cpp  dcps.h  msg_queue.h  semaphore.cpp  semaphore.h
Plugins/MagicDevicePlugin/magicianlite_virtual/src/runtime/log/: log.cpp  log.h
Plugins/MagicDevicePlugin/magicianlite_virtual/src/ui/: main_menu.cpp  main_menu.h  main_menu.ui
Plugins/MagicDevicePlugin/magicianlite_virtual/src/virtualport/: MonitorUI.cpp  MonitorUI.h  MySafeUI.cpp  MySafeUI.h  VSPServer.cpp  VSPServer.h  VirtualSerialPort.cpp  VirtualSerialPort.h  VirtualSerialPortInfo.cpp  VirtualSerialPortInfo.h  VirtualSerialPortManager.cpp  VirtualSerialPortManager.h
license/: LGPLv2-license.txt  Qt-GPLv3-license.txt  Qt-LGPL-license.txt  readme.md  readme_cn.md
smbclient/: CMakeLists.txt  README.md
test/: main.cpp  test.pro  test_industrialrobot_filecontroll.cpp  test_industrialrobot_filecontroll.h  test_industrialrobot_filecontroll_concurrency.cpp  test_industrialrobot_filecontroll_concurrency.h
(+240 files in other folders)
